<resources>
    <!-- General -->
    <string name="app_name">Antidote Danmark</string>

    <!-- FirstAidGuide -->
    <string name="title_activity_first_aid_guide">Førstehjælp</string>

    <string name="first_aid_guide01_title">Tegn På Overdosis</string>
    <string name="first_aid_guide01_number">1/6</string>
    <string name="first_aid_guide01_description01">Ingen/svag vejrtrækning.</string>
    <string name="first_aid_guide01_description02">Blå læber og negle.</string>
    <string name="first_aid_guide01_description0301">Ingen reaktion -> </string>
    <string name="first_aid_guide01_description0302"> RÅB OM HJÆLP!</string>

    <string name="first_aid_guide02_title">Sikre Frie Luftveje</string>
    <string name="first_aid_guide02_number">2/6</string>
    <string name="first_aid_guide02_description01">Bøj hovedet tilbage og åben munden.</string>
    <string name="first_aid_guide02_description02">Lyt og føl efter vejrtrækning i max 10 sek.</string>
    <string name="first_aid_guide02_description03">Se om brystet bevæger sig.</string>

    <string name="first_aid_guide03_title">Ingen Reaktion Ring 1–1–2</string>
    <string name="first_aid_guide03_number">3/6</string>
    <string name="first_aid_guide03_description01">ER DER NORMAL VEJRTRÆKNING?</string>
    <string name="first_aid_guide03_description02">NEJ -> HJERTESTOP! -> GÅ TIL 4 + 5.</string>
    <string name="first_aid_guide03_description03">JA -> GÅ TIL 6.</string>

    <string name="first_aid_guide04_title">Kunstigt Åndedræt + Hjertemassage</string>
    <string name="first_aid_guide04_number">4/6</string>
    <string name="first_aid_guide04_description01">Hjertemassage = 30 tryk</string>
    <string name="first_aid_guide04_description02">Indblæsning = 2 forsøg</string>
    <string name="first_aid_guide04_description03">Gentag til hjælp kommer/normal vejrtrækning.</string>

    <string name="first_aid_guide05_title">Modgift Næsespray</string>
    <string name="first_aid_guide05_number">5/6</string>
    <string name="first_aid_guide05_description01">HJÆLP HINANDEN!</string>
    <string name="first_aid_guide05_description02">1 ampul i hvert næsebor - hvis det ikke forsinker hjertemassage/indblæsninger ved hjertestop.</string>

    <string name="first_aid_guide06_title">Normal Vejrtrækning</string>
    <string name="first_aid_guide06_number">6/6</string>
    <string name="first_aid_guide06_description01">Læg personen på siden.</string>
    <string name="first_aid_guide06_description02">Sikre frie luftveje (2).</string>
    <string name="first_aid_guide06_description03">Giv modgift ved tegn på overdosis.</string>
    <string name="first_aid_guide06_description04">Bliv til ambulancen kommer.</string>

    <!-- About -->
    <string name="title_activity_about">Antidote Danmark</string>
    <string name="antidote_danmark_logo_cross">Antidote Danmark Logo Cross</string>
    <string name="aboutText">Antidote Danmark\&#39;s mission er, at nedsætte den alt for store dødelighed blandt stofbrugere i Danmark via uddannelse og udbredelse af modgift.</string>
    <string name="aboutCredits">Grundlægger og ide: Michael Lodberg Olsen\nDesign og udvikling: Pernille Kjær Aagaard\nDesign og udvikling: Simon Rosted</string>

    <!-- FirstAidVideo -->
    <string name="title_activity_youtube">Video Guide</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="player_error">Error initializing YouTube player</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="about">Om Antidote</string>

</resources>
