<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/aboutLayoutHolder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".About">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/aboutTop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingTop="20dp">

        <ImageView
            android:id="@+id/aboutLogoCross"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/antidote_danmark_logo_cross"
            android:cropToPadding="false"
            android:onClick="launchSite"
            android:src="@drawable/logo_cross" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/aboutBottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/aboutText"
            style="?android:textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="@string/aboutText"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/abc_text_size_medium_material" />

        <LinearLayout
            android:id="@+id/divider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider" />
        </LinearLayout>

        <TextView
            android:id="@+id/aboutCredits"
            style="?android:textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="@dimen/text_line_spacing"
            android:paddingBottom="8dp"
            android:text="@string/aboutCredits"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/abc_text_size_medium_material" />
    </LinearLayout>

</LinearLayout>