<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/first_aid_guide_fragment03"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/first_aid_guide03_SectionTop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#FFFFFF"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/first_aid_guide03_drawable"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/first_aid_guide03_title"
            android:padding="20dp"
            android:src="@drawable/step03" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/first_aid_guide03_SectionBottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/background_material_darker"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/first_aid_guide03_SectionBottomText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/first_aid_guide03_title"
                    style="?android:textAppearanceLarge"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="top|left"
                    android:text="@string/first_aid_guide03_title"
                    android:textColor="@color/accent_material_light"
                    android:textIsSelectable="false"
                    android:textStyle="bold"
                    android:textSize="@dimen/abc_text_size_headline_material"
                    android:maxLines="1"
                    app:autoSizeTextType="uniform" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/first_aid_guide03_number"
                    style="?android:textAppearanceLarge"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="top|right"
                    android:text="@string/first_aid_guide03_number"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/abc_text_size_headline_material"
                    android:maxLines="1"
                    app:autoSizeTextType="none" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="@dimen/activity_vertical_margin">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/first_aid_guide03_description01"
                    style="?android:textAppearanceMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingMultiplier="@dimen/text_line_spacing"
                    android:paddingBottom="16dp"
                    android:text="@string/first_aid_guide03_description01"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/abc_text_size_medium_material"
                    android:maxLines="1"
                    app:autoSizeTextType="uniform" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/first_aid_guide03_description02"
                    style="?android:textAppearanceMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingMultiplier="@dimen/text_line_spacing"
                    android:paddingBottom="8dp"
                    android:text="@string/first_aid_guide03_description02"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/abc_text_size_medium_material"
                    android:textStyle="bold"
                    android:maxLines="1"
                    app:autoSizeTextType="uniform" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/first_aid_guide03_description03"
                    style="?android:textAppearanceMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingMultiplier="@dimen/text_line_spacing"
                    android:paddingBottom="8dp"
                    android:text="@string/first_aid_guide03_description03"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/abc_text_size_medium_material"
                    android:textStyle="bold"
                    android:maxLines="1"
                    app:autoSizeTextType="uniform" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>